# advent-of-code-2025

./: .gitignore  README.md
day_1/: aoc.toml  problem.md
day_1/python/: README.md
day_1/python/src/template/: problem_1.py  problem_2.py  utils.py
day_1/python/tests/: test_problems.py
day_1/rust/template/.cargo/: config.toml
day_2/: aoc.toml  problem.md
day_2/python/: pyproject.toml  run.sh
day_2/python/src/template/: __about__.py  problem_1.py  problem_2.py
day_2/python/tests/: __init__.py  test_problems.py
day_2/rust/template/src/: main.rs  utils.rs
template/: .gitignore
template/python/: pyproject.toml
template/python/src/template/: __main__.py  problem_1.py  problem_2.py
template/python/tests/: test_problems.py
