[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Manas Mengle", email = "manmenonsense@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "result",
]

[project.urls]
Documentation = "https://github.com/unknown/template#readme"
Issues = "https://github.com/unknown/template/issues"
Source = "https://github.com/unknown/template"

[dependency-groups]
dev = [
  "coverage[toml]>=6.5",
  "pytest",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]

[tool.uv.sources]
result = { git = "https://github.com/rustedpy/result" }

# optional: if you want uv to auto-sync a virtualenv (like hatch default env)
# sync = true

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "B027",
  "FBT003",
  "S105", "S106", "S107",
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = ["F401"]

[tool.ruff.isort]
known-first-party = ["template"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["template", "tests"]
branch = true
parallel = true
omit = ["src/template/__about__.py"]

[tool.coverage.paths]
template = ["src/template", "*/template/src/template"]
tests = ["tests", "*/template/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.version]
path = "src/template/__about__.py"
